--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
+@import url('footer.css');
+
 * {
     margin: 0;
     padding: 0;
@@ -119,6 +121,18 @@ img:hover {
     font-family: 'Jura', sans-serif;
 }
 
+/*MENU-BTN*/
+.menu-btn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    display: none;
+    z-index: 3;
+}
+.menu-btn i {
+    font-size: 1.5rem;
+}
+
 @media screen and (max-width:1400px){
     
     .grid-box {
@@ -134,6 +148,7 @@ img:hover {
         background: rgb(27, 26, 26);
         height: 100vh;
         margin-left: -1000px;
+        transition: 1s ease;
     }
     nav {
         height: 100%;
@@ -154,4 +169,21 @@ img:hover {
         font-size: 1.5rem;
         color: rgb(27, 26, 26);
     }
+    .visible {
+        margin-left: 0;
+    }
+    .menu-btn {
+        display: block;
+    }
+}
+
+@media screen and (max-width:500px) {
+    .grid-box {
+        width: 300px;
+        height: 300px;
+    }
+    .grid-container {
+        width: 100%;
+    }
+
 }
