--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,9 @@
             </ul>
         </nav>
     </di>
+
+    <!--MENU-BTN-->
+    <di class="menu-btn"><i class="fa-solid fa-bars-staggered"></i></di>
     
     <!--logo-->
     <div class="logo">
@@ -40,8 +43,13 @@
         </div>
     </section>
     
-
-
+     <!--FOOTER-->
+     <footer class="footer"></footer>
+    
     <script src="/public/js/index.js"></script>
+    <script src="/public/js/footer.js"></script>
+    <script src="/public/js/nav.js"></script>
+
+
 </body>
 </html>
