--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/css/styles.css">
     <!--GOOGLE-FONTS-->
-    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300&family=Ubuntu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jura:wght@300&family=Ubuntu&display=swap&family=Lilita+One" rel="stylesheet">
     <!--FONT-AWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <title>Daily News</title>
@@ -17,8 +17,8 @@
     <di class="nav">
         <nav>
             <ul>
-                <li><i class="fa-solid fa-user"></i><a href="">Login</a></li>
-                <li><i class="fa-solid fa-user-group"></i><a href="">Sign up to Daily news</a></li>
+                <li><i class="fa-solid fa-user"></i><a href="/login">Login</a></li>
+                <li><i class="fa-solid fa-user-group"></i><a href="/signup">Sign up to Daily news</a></li>
                 <li><i class="fa-solid fa-earth-americas"></i><a href="">Home page</a></li>
             </ul>
         </nav>
@@ -32,6 +32,17 @@
         <h1>news <span>daily</span></h1>
 
     </div>
+
+    <!--HEADER-->
+    <header>
+        <div class="background-header">
+            <div class="title-about">
+                <div class="header-title"><h2>news <span>daily</span></h2></div>
+                <div class="about"><h3>We are your go to news site, you'll find the most recent/relevent events happening worldwide</h3></div>
+            </div>
+        </div>
+
+    </header>
 
     <!--MAIN-CONTENT-->
 
