--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -8,11 +8,15 @@ footer {
 }
 .footer-content {
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(400px,1fr));
+    grid-template-columns: repeat(3 , 1fr);
     padding: 50px;
     color: rgb(214, 202, 202);
     background: rgb(39, 37, 37);
     width: 100%;
+}
+
+.footer-content > * {
+    place-self: center;
 }
 .assistance,
 .assistance2 {
@@ -61,9 +65,13 @@ transform: scale(1.5);
     font-size: 3vmin;
 }
 
-@media screen and (max-width:100px) {
+@media screen and (max-width:1000px) {
     .footer-content {
-        grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+        grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+        
+    }
+    .footer-content > * {
+        place-self: start;
     }
     
 }
