--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,12 +36,13 @@ nav ul li a {
     color: rgb(236, 223, 223);
     padding-left: 1rem;
 }
-nav ul li i {
+nav ul li i  {
     color: rgb(236, 223, 223);
+    transition: 500ms ease;
 }
 
-nav ul li a:hover {
-    color: rgb(248, 245, 245);
+nav ul li:hover > i {
+    color: rgb(185, 67, 67);
 }
 nav ul li:hover {
     transform: scale(1.2); 
@@ -89,12 +90,14 @@ nav ul li:hover {
 }
 .img {
     width: 100%;
+    position: relative;
     height: fit-content;
     margin-bottom: 10px;
     border-radius: 5px;
     border-radius: 10px;
     overflow: hidden;
 }
+
 
 img {
     border-radius: 10px;
@@ -121,6 +124,48 @@ img:hover {
     font-family: 'Jura', sans-serif;
 }
 
+/*HEADER*/
+header {
+    width: 100vw;
+    height: 100vh;
+}
+
+.background-header {
+    width: 100%;
+    height: 100%;
+    background: url('/public/imgs/newsDailyheader.jpeg');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title-about {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.header-title h2 {
+    font-size: 4.5rem;
+    font-family: 'Jura', sans-serif;
+    font-weight: 700;
+    color: rgb(241, 233, 233);
+}
+
+
+.header-title h2 span {
+    color: rgb(185, 72, 72);
+}
+
+.about {
+    font-size: 1.5vw;
+    font-family: 'Jura', sans-serif;
+    color: rgb(236, 223, 223);
+    font-weight: 800;
+}
+
 /*MENU-BTN*/
 .menu-btn {
     position: absolute;
@@ -128,6 +173,7 @@ img:hover {
     right: 15px;
     display: none;
     z-index: 3;
+    color:rgb(185, 72, 72) ;
 }
 .menu-btn i {
     font-size: 1.5rem;
@@ -167,7 +213,6 @@ img:hover {
     }
     .logo h1 {
         font-size: 1.5rem;
-        color: rgb(27, 26, 26);
     }
     .visible {
         margin-left: 0;
@@ -175,15 +220,56 @@ img:hover {
     .menu-btn {
         display: block;
     }
+    .about {
+        font-size: 2.5vw;
+    }
 }
 
 @media screen and (max-width:500px) {
     .grid-box {
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: fit-content;
     }
     .grid-container {
         width: 100%;
     }
+
+    .grid-container > * {
+        place-self: center ;
+    }
+
+    .header-title h2 {
+        font-size: 3.5rem;
+    }
+    .newsHeader {
+        font-size: 1rem;
+    }
+    .nav ul li {
+        font-size: 1rem ;
+        
+     }
+
+}
+
+@media screen and (max-width:350px) {
+    .background {
+        display: flex;
+        justify-content: center;
+    }
+    .grid-box {
+        width: 150px;
+        place-self: center;
+        
+    }
+    .grid-container {
+        width: 100%;
+        margin: 0;
+        place-items: center;
+        justify-content: center;
+        align-items: center;
+        justify-self: center;
+        align-content: center;
+    }
+    
 
 }
