--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
             <ul>
                 <li><i class="fa-solid fa-user"></i><a href="/login">Login</a></li>
                 <li><i class="fa-solid fa-user-group"></i><a href="/signup">Sign up to Daily news</a></li>
-                <li><i class="fa-solid fa-earth-americas"></i><a href="">Home page</a></li>
+                <li><i class="fa-solid fa-earth-americas"></i><a href="/">Home page</a></li>   
             </ul>
         </nav>
     </di>
