--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/signup.css">
     <title>Log in</title>
 </head>
 <body>
 
     <section class="background">
+        <h2 class="titleh2"><span>log in</span> to news <span>daily</span></h2>
         <div class="content">
             <div class="signup-container">
                 <form action="/login" method="post">
                     <div class="input-box">
-                        <input type="text" name="user" id="user" placeholder="create username">
+                        <input type="text" name="user" id="user" placeholder="insert username">
                     </div>
                     <div class="input-box">
-                        <input type="password" name="pass" id="pass" placeholder="create password">
+                        <input type="password" name="pass" id="pass" placeholder="insert password">
                     </div>
                     <div class="input-box-button">
                         <input type="submit" value="login">
@@ -27,5 +29,21 @@
         </div>
     </section>
     
+
+     <!--Sweetalert2-->
+   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
+   <% if(typeof alert != "undefined") { %>
+    <script>
+        Swal.fire({
+            title: '<%=alertTitle%>',
+            text: '<%=alertMessage%>',
+            icon: '<%=alertIcon%>',
+            showConfirmButton: <%= showConfirmButton %>,
+            timer: <%= timer %>
+        }).then(()=>{
+            window.location= '/<%= ruta %>' 
+        })
+    </script>
+    <%} %>  
 </body>
 </html>
