--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/css/signup.css">
     <title>Sign up</title>
 </head>
 <body>
 
     <section class="background">
+        <h2 class="titleh2"><span>Sign up</span> to news <span>daily</span></h2>
         <div class="content">
             <div class="signup-container">
                 <form action="/signup" method="post">
@@ -39,5 +41,21 @@
         </div>
     </section>
     
+
+    <!--Sweetalert2-->
+   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> 
+   <% if(typeof alert != "undefined") { %>
+    <script>
+        Swal.fire({
+            title: '<%=alertTitle%>',
+            text: '<%=alertMessage%>',
+            icon: '<%=alertIcon%>',
+            showConfirmButton: <%= showConfirmButton %>,
+            timer: <%= timer %>
+        }).then(()=>{
+            window.location= '/login <%= ruta %>'
+        })
+    </script>
+    <%} %>  
 </body>
 </html>
